1999-09-03  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid-page-finish.c
	(gnome_druid_page_finish_new_with_vals): don't call gnome_druid_page_finish_new
	(gnome_druid_page_finish_construct): new policy for watermarks.

	* gnome-druid-page-start.c
	(gnome_druid_page_start_configure_size): new policy for watermark images.
	(gnome_druid_page_start_new_with_vals): don't call
	gnome_druid_page_start_new.

1999-09-02  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid-page-standard.c
	(gnome_druid_page_standard_set_bg_color): set the color of the
	outside frame.

	* gnome-druid-page.c (gnome_druid_page_paint): Add paint
	function.  Now redraw problem is gone.

1999-09-01  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid.c (gnome_druid_insert_page): Make the first page in
	the list be shown.
	(gnome_druid_remove): If a page is deleted, and it is being shown,
	show the next page.
	(gnome_druid_insert_page): if a child is added, and the druid is
	mapped, then map the child to.  Same with realization.

	* gnome-druid-page-standard.c
	(gnome_druid_page_standard_configure_size): show internal widgets.

1999-08-31  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (book_create): show notebook before adding it to
	the gnome-app in case the former will be mapped.
	(set_active_view): fixed a bug that caused active_child not to get
	properly set on rare occasions.
	(gnome_mdi_remove_view): a fix similar to the above.

1999-08-30  Federico Mena Quintero  <federico@redhat.com>

	* gnome-file-entry.c (gnome_file_entry_get_full_path): Use
	getcwd() correctly.  This really needs to be done in a portable
	fashion.  Do tilde expansion, because this thing is supposed to
	return valid pathnames.
	(tilde_expand): Stole function from mc/src/utilunix.c to do tilde
	expansion, glib-ified it.

1999-08-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_append_imlib): Made text const.
